Fix up a lot of corner cases that have to do with overlapping elements. Also, set the line_height of the text elements rather than relying on the normal field.

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -1274,6 +1274,12 @@ html[dir='rtl'] .attachmentsItem > button {
 .textLayer {
   opacity: 0.2;
 }
+/* We need to calculate font height before rendering. Setting line-height to
+   normal is inconsistent across browsers.  Instead, set it to a common
+   value. */
+.textLayer div {
+  line-height: 1.14;
+}
 
 #errorWrapper {
   background: none repeat scroll 0 0 #FF5555;
